7102686: Restructure timestamp code so that jars and modules can more easily share the same code
Reviewed-by: mchung